--- a/css/style.css
+++ b/css/style.css
@@ -75,29 +75,36 @@ links in the navigation are in the hover or focus state.*/
   transition: top 1s ease-out;
   z-index: 1;
   position: absolute;
-  left: -1000px;
+  top: 50px;
   overflow: hidden;
   /*Your code here*/
 }
 
 .skip a:focus {
   position: absolute;
-  transform: translateY(10px);
+  top: -10px;
 
 }
 /*Req 3b*/
 /*Write selector/rule property to position the skip class element*/
 
+a:focus{
+  border-style: dashed;
+  border-top: 2px;
+  border-bottom: 2px;
+  
+}
 /*Req 4*/
 /*Write selector/rule property to style all elements when in focus*/
 
 /*Req 5*/
 .container{
-  display: grid;
+  display: inline;
   grid-template-columns: 1fr 3fr 3fr 1fr;
   grid-template-rows: auto;
   justify-content: space-between;
   overflow: hidden;
+  border-spacing: 20px;
   /*Your Code Here*/
 }
 
@@ -109,7 +116,7 @@ header{
   color: white;
   height: 400px;                /* Parallax effect */
   margin-bottom: 25px;
-  background-image: "header.jpg";
+  background-image: url("../images/header.jpg");
   background-repeat: no-repeat;
   /*Req 6a*/
   /*Set margin */
@@ -207,9 +214,10 @@ header{
 
   /*Req 11*/
   .container{
-    display: grid;
+    display: inline;
     grid-template-columns: 50px auto 500px auto 50px;
     grid-template-rows: 400px 425px 425px 400px;
+    overflow: hidden;
 
     /*Your code here:*/
   }
