--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,8 @@ a:focus{
   grid-template-rows: auto;
   justify-content: space-between;
   overflow: hidden;
-  border-spacing: 20px;
+  border-collapse: seperate;
+  border-spacing: 0 15px;
   /*Your Code Here*/
 }
 
@@ -207,8 +208,10 @@ header{
   /*Req 10*/
   nav{
     padding: 30px 0px;
-    position: absolute;
+    position: fixed;
     right: 0px;
+    vertical-align: center;
+    text-align: center;
     /*Your code here:*/
   }
 
