--- a/css/style.css
+++ b/css/style.css
@@ -75,23 +75,25 @@ links in the navigation are in the hover or focus state.*/
   transition: top 1s ease-out;
   z-index: 1;
   position: absolute;
-  top: 50px;
-  overflow: hidden;
+  top: -50px;
   /*Your code here*/
 }
 
-.skip a:focus {
+a:focus {
+  border-style:dashed;
   position: absolute;
-  top: -10px;
+  border-top: 2px;
+  border-bottom: 2px;
+  top: 10px;
 
 }
 /*Req 3b*/
 /*Write selector/rule property to position the skip class element*/
 
-a:focus{
-  border-style: dashed;
-  border-top: 2px;
-  border-bottom: 2px;
+:focus{
+  border-top-style: dashed;
+  border-bottom-style:dashed;
+  border-width: 2px;
   
 }
 /*Req 4*/
@@ -101,11 +103,9 @@ a:focus{
 .container{
   display: inline;
   grid-template-columns: 1fr 3fr 3fr 1fr;
-  grid-template-rows: auto;
+  grid-auto-rows: auto auto auto auto;
   justify-content: space-between;
-  overflow: hidden;
-  border-collapse: seperate;
-  border-spacing: 0 15px;
+  grid-row-gap: 20px;
   /*Your Code Here*/
 }
 
@@ -139,8 +139,10 @@ header{
 
 /*Req 8a, 8b, and 8c*/
 .about-image, .method-image, .client-image, .contact-image{
-  column-span: all;
+  grid-column: 1/ -1;
   max-height: 650px;
+  min-width: 0;
+  min-height: 0;
   overflow: hidden;
   
 
@@ -151,39 +153,32 @@ header{
 /*Req 7b & 8d*/
 .about, .about-image{
   grid-row: 1 / span 1;
-  grid-row: 2/ span 1;
-  grid-row: 3 / span 1;
-  grid-row: 4/ span 1;
+  
    /*Your Code Here*/
 
 }
 
 /*Req 7b & 8d*/
 .method, .method-image{
-  grid-row: 1 / span 1;
+
   grid-row: 2/ span 1;
-  grid-row: 3 / span 1;
-  grid-row: 4/ span 1;
+
    /*Your Code Here*/
 
 }
 
 /*Req 7b & 8d*/
 .client, .client-image{
-  grid-row: 1 / span 1;
-  grid-row: 2/ span 1;
-  grid-row: 3 / span 1;
-  grid-row: 4/ span 1;
+  grid-row: 3/ span 1;
+
     /*Your Code Here*/
 
 }
 
 /*Req 7b & 8d*/
 .contacts, .contact-image{
-  grid-row: 1 / span 1;
-  grid-row: 2/ span 1;
-  grid-row: 3 / span 1;
-  grid-row: 4/ span 1;
+  grid-row: 4 / span 1;
+
     /*Your Code Here*/
 
 }
@@ -194,6 +189,7 @@ header{
   border: 10px solid black;
   padding: 30px;
   text-align: center;
+  align-self: center;
   /*Your code here:*/
 
 }
@@ -208,31 +204,27 @@ header{
   /*Req 10*/
   nav{
     padding: 30px 0px;
-    position: fixed;
-    right: 0px;
-    vertical-align: center;
-    text-align: center;
+   /* position: fixed;*/
+    text-align: right;
     /*Your code here:*/
   }
 
   /*Req 11*/
   .container{
-    display: inline;
     grid-template-columns: 50px auto 500px auto 50px;
     grid-template-rows: 400px 425px 425px 400px;
-    overflow: hidden;
 
     /*Your code here:*/
   }
 
   /*Req 12*/
   .about, .client, .method-image, .contact-image{
-    grid-column: 3/ span 2;
+    grid-column: 3/ span 5;
   }
 
   /*Req 13*/
   .about-image, .client-image, .method, .contacts{
-    grid-column: 2/ span 2;
+    grid-column: 2/ span 4;
   }
 }
 
